--- a/amazon.html
+++ b/amazon.html
@@ -56,7 +56,8 @@
         
       </div>
     </div>
-
+    
+    <script src="data/products.js"></script>
     <script src="scripts/amazon.js"></script>
   </body>
 </html>
